# zotty

./: .gitignore  Cargo.toml  README.md  config.toml.example  migrate_mee6.py  package.json  zotty.code-workspace
src/: commands.rs  config.rs  database.rs  main.rs  modules.rs
src/commands/: help.rs
src/database/: sqlite_connection.rs
src/modules/: help.rs  levels.rs  ranks.rs
src/modules/levels/: rank_card.rs
src/modules/ranks/: colour.rs  leaderboard.rs  level_up.rs  rank.rs  rank_card.rs
src/modules/ranks/leaderboard/: leaderboard_card.rs
src/modules/ranks/rank/: rank_card.rs
zotty/: .gitignore  Cargo.toml  config.toml.example  migrate_mee6.py
zotty-web/: .eslintrc  package.json  snowpack.config.js  snowpack.config.mjs  tsconfig.json  web-test-runner.config.js
zotty-web/public/: index.html
zotty-web/src/: App.tsx  Authorize.tsx  Login.tsx  index.sass  index.tsx  login.ts  types.ts
zotty-web/src/components/: Header.sass  Header.tsx  ServerListItem.sass  ServerListItem.tsx  UserMenu.sass  UserMenu.tsx
zotty-web/src/routes/: Authorize.tsx  Home.sass  Home.tsx  Servers.sass  Servers.tsx
zotty-web/src/styles/: _mixins.sass
zotty-web/src/utils/: auth.ts  discord.ts  login.ts  misc.ts  request.ts
zotty/resources/: config.toml.example
zotty/src/: commands.rs  config.rs  database.rs  main.rs  web.rs
zotty/src/database/: sqlite_connection.rs
zotty/src/modules/: options.rs  ranks.rs
zotty/src/modules/ranks/: colour.rs  image_utils.rs  leaderboard.rs  rank.rs
zotty/src/modules/ranks/leaderboard/: leaderboard_card.rs
zotty/src/modules/ranks/rank/: rank_card.rs
