[package]
name = "new_etech_bot"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] } #lazy
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "framework", "standard_framework"], version = "0.10" }
diesel = { version = "1.4.4", features = ["sqlite"] }
lazy_static = "1.4.0"
regex = "1.4.3"
serde = "1"
toml = "0.5"