[package]
name = "new_etech_bot"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] } #lazy
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "framework", "standard_framework"], version = "0.10" }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "mysql", "postgres" ] }
path-absolutize = "3.0"
once_cell = "1.7"
regex = "1.4.3"
serde = "1"
toml = "0.5"