[package]
name = "zotty"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
reqwest = "0.11"
r2d2 = "0.8"
r2d2_sqlite = "0.18"
rand = "0.8"
chrono = "0.4"
path-absolutize = "3.0"
once_cell = "1.7"
regex = "1.4.3"
serde = "1"
toml = "0.5"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.raqote]
version = "0.8"

[dependencies.rocket]
git =  "https://github.com/SergioBenitez/Rocket.git"
